--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
+    implementation 'com.dinuscxj:recycleritemdecoration:1.0.0'
 
     //图标
     implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'
