--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 	<application
 		android:name=".app.ScreenRecordApplication"
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@mipmap/app_icon"
 		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
+		android:roundIcon="@mipmap/app_icon"
 		android:supportsRtl="true"
 		android:textAllCaps="false"
 		android:theme="@style/AppTheme">
@@ -34,9 +34,8 @@
 		<activity android:name=".otherdetails.AboutActivity"/>
 		<activity android:name=".otherdetails.RewardActivity" />
 		<activity android:name=".otherdetails.FeedbackActivity" />
-		<activity android:name=".otherdetails.ProblemActivity" />
 
-		<provider
+        <provider
 			android:name="androidx.core.content.FileProvider"
 			android:authorities="com.bing.example.fileprovider"
 			android:exported="false"
