--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.bing.example"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.02"
     }
 
     //指定jdk版本
@@ -27,10 +27,51 @@ android {
         disable 'GoogleAppIndexingWarning'
     }
 
-    buildTypes {
+    signingConfigs {
+        debug {
+            storeFile file('..\\key_yeqiu.jks')
+            storePassword '3838072LBB'
+            keyPassword '3838072LBB'
+            keyAlias = 'key_yeqiu'
+        }
         release {
+            storeFile file('..\\key_yeqiu.jks')
+            storePassword '3838072LBB'
+            keyPassword '3838072LBB'
+            keyAlias = 'key_yeqiu'
+        }
+    }
+
+    buildTypes {
+        debug {
+            // 如果没有提供混淆规则文件，则设置默认的混淆规则文件（SDK/tools/proguard/proguard-android.txt）
+            pseudoLocalesEnabled true
+            // 显示Log
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+            //混淆
             minifyEnabled false
+            //Zipalign优化
+            zipAlignEnabled true
+            //加载默认混淆配置文件
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            //签名
+            signingConfig signingConfigs.release
+        }
+        release {
+            // 如果没有提供混淆规则文件，则设置默认的混淆规则文件（SDK/tools/proguard/proguard-android.txt）
+            pseudoLocalesEnabled true
+            // 不显示Log
+            buildConfigField "boolean", "LOG_DEBUG", "true"
+            //混淆
+            minifyEnabled true
+            //Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件
+            shrinkResources true
+            //加载默认混淆配置文件
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            //签名
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -40,7 +81,7 @@ dependencies {
 
     implementation 'com.github.beiger:MVVMBase:0.29'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11"
     implementation "androidx.core:core-ktx:1.0.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
