--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 		android:theme="@style/AppTheme">
 
 		<activity
-			android:name=".main.activity.MainActivity"
+			android:name=".main.home.MainActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden"
 			android:label="@string/app_name"
 			android:screenOrientation="portrait">
@@ -29,7 +29,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".main.activity.SettingActivity"
+			android:name=".otherdetails.SettingActivity"
 			android:screenOrientation="portrait" />
 		<activity android:name=".otherdetails.AboutActivity"/>
 		<activity android:name=".otherdetails.RewardActivity" />
