--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <!--<uses-permission android:name="android.permission.GET_TASKS" />-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- <uses-permission android:name="android.permission.GET_TASKS" /> -->
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
 
     <application
@@ -20,7 +19,7 @@
         android:supportsRtl="true"
         android:textAllCaps="false"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".search.SearchActivity"></activity>
         <activity
             android:name=".main.home.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -39,7 +38,7 @@
         <activity android:name=".otherdetails.FeedbackActivity" />
 
         <service
-            android:name="com.bing.example.main.home.floatingview.CustomFloatingViewService"
+            android:name=".main.home.floatingview.CustomFloatingViewService"
             android:exported="false" />
 
         <provider
