--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
     <application
             android:name=".app.ScreenRecordApplication"
             android:allowBackup="true"
-            android:icon="@mipmap/app_icon"
+            android:icon="@mipmap/app_logo"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/app_icon"
+            android:roundIcon="@mipmap/app_logo"
             android:supportsRtl="true"
             android:textAllCaps="false"
             android:theme="@style/AppTheme">
-        <activity android:name=".videoedit.VideoEditActivity"></activity>
+        <activity android:name=".videoedit.VideoEditActivity"/>
         <activity android:name=".search.SearchActivity" />
         <activity
                 android:name=".main.home.MainActivity"
